Change game name

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>My semestral work</title>
+<title>Gladiator Arena</title>
 <style>
 body {
   background-color: black;
